--- a/sass/_controlbox.scss
+++ b/sass/_controlbox.scss
@@ -226,7 +226,6 @@
                 color: var(--controlbox-heading-color);
                 font-weight: var(--controlbox-heading-font-weight);
                 padding: 0;
-                margin: var(--controlbox-heading-top-margin) 0 0.5em 0;
                 font-size: 1.1em;
                 line-height: 1.1em;
                 text-transform: uppercase;
@@ -242,10 +241,11 @@
 
             .controlbox-heading__btn {
                 cursor: pointer;
-                align-self: flex-start;
                 font-size: 1em;
                 padding: 0;
-                margin: var(--controlbox-heading-top-margin) 0 var(--inline-action-margin) 0.75em;
+                margin: var(--controlbox-heading-top-margin) 0 var(--inline-action-margin) 0;
+                min-width: 25px;
+                text-align: center;
                 &.fa-vcard {
                     margin-top: 1em;
                 }
@@ -320,8 +320,14 @@
             padding: 1em 0 1em 0;
 
             .controlbox-padded {
-               padding-left: 1em;
-               padding-right: 1em;
+                padding-left: 1em;
+                padding-right: 1em;
+                align-items: center;
+                line-height: normal;
+                .change-status {
+                    min-width: 25px;
+                    text-align: center;
+                }
             }
 
             .add-converse-contact {
